<resources>
    <string name="app_name">PFE-dutyfree</string>
    <string name="currentLang"> Your language is : </string>
    <string name="hello_world">Hello world</string>
    <string name="goToCart">View cart</string>
    <string name="goToTicketForm">Order</string>
    <string name="ticketNumber">Your ticket number</string>
    <string name="sendTicketNumber">Send</string>
    <string name="goToScan">Scan my ticket</string>

    <string name="creditCardNumber">Card number</string>
    <string name="creditCardCryptogram">Cryptogram (3 last number on the back of your credit card)</string>

    <string name="sendCreditCardNumber">Finalize my order</string>
    <string name="cashPayment">cash payment</string>
    <string name="cashPaymentCheckText">Your order will be ready before your shipment. Thank you for choosing AirStore!</string>
    <string name="ticketCheckText">Welcome %1$s, your destination benefits from the tax-free. Good shopping.</string>
    <string name="welcomeMsg">Welcome %1$s, your destination does not benefit from the tax refund. Good shopping.</string>
    <string name="notOkMsg">Unfortunately, AirStore is not yet installed at your airport.</string>
    <string name="emptyTxt">Please enter a valid ticket number.</string>
    <string name="invalidCardInfo">Please enter valid information.</string>
    <string name="emptyCart">Your cart is empty.</string>
    <string name="currentLangButton">Following</string>
    <string name="langSelect">Other language : </string>
    <string name="goToCatalogActivity">To the catalog</string>
    <string name="returnToMainActivity">Back to the homepage</string>
    <string name="total">Total</string>
    <string name="deliveryFee">Delivery fee</string>
    <string name="endDate">MM/YYYY</string>

    <string name="nav_text_all">All</string>
    <string name="nav_text_tobacco">Tobacco</string>
    <string name="nav_text_alcohol">Alcohol</string>
    <string name="nav_text_sweets">Sweets</string>
    <string name="nav_text_jewerly">Jewerly</string>
    <string name="nav_text_pack">Our packs</string>
    <string name="nav_text_kids">For kids</string>

    <string name="title_activity_navigation">AirStore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
