<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/activity_ticket_form"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:scrollbars="vertical">
<LinearLayout
    android:layout_width="fill_parent"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/ticketNumber"
        android:layout_height="wrap_content"
        android:hint="@string/ticketNumber"
        android:inputType="text"
        android:layout_width="fill_parent">
    </EditText>

    <Button
        android:id="@+id/sendTicketNumber"
        android:layout_height="wrap_content"
        android:text="@string/sendTicketNumber"
        android:onClick="sendTicketNumber"
        android:layout_width="fill_parent">
    </Button>

    <Button
        android:id="@+id/goToScan"
        android:layout_height="wrap_content"
        android:text="@string/goToScan"
        android:onClick="goToScan"
        android:layout_width="fill_parent">
    </Button>

</LinearLayout>
</ScrollView>
