<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_payment_activity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hello World!" />

        <EditText
            android:id="@+id/creditCardNumber"
            android:layout_height="wrap_content"
            android:hint="@string/creditCardNumber"
            android:inputType="number"
            android:maxLength="16"
            android:layout_width="fill_parent">
        </EditText>

        <EditText
            android:id="@+id/creditCardCryptogram"
            android:layout_height="wrap_content"
            android:hint="@string/creditCardCryptogram"
            android:inputType="number"
            android:maxLength="3"
            android:layout_width="fill_parent">
        </EditText>

        <Button
            android:id="@+id/sendCreditCardNumber"
            android:layout_height="wrap_content"
            android:text="@string/sendCreditCardNumber"
            android:onClick="sendCreditCardNumber"
            android:layout_width="fill_parent">
        </Button>

    </LinearLayout>
</ScrollView>
