<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_cart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#EDF6FC"
    tools:context="supinternet.pfe_dutyfree.CartActivity">

    <ListView
        android:id="@+id/listView"
        android:layout_width="fill_parent"
        android:background="#EDF6FC"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/goToTicketForm"
        android:text="@string/goToTicketForm"
        android:onClick="goToPaymentForm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        android:background="@color/yellowPrimary"
        android:layout_alignParentBottom="true" >
    </Button>

    <TextView
        android:gravity="center_vertical|left"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/total"
        android:background="#EDF6FC"
        android:textAllCaps="true"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="37dp"
        android:id="@+id/textView4"
        android:layout_width="240dp"
        android:paddingLeft="10dp"
        />

    <TextView
        android:id="@+id/priceTotal"
        android:gravity="center_vertical|left"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:background="#EDF6FC"
        android:textAllCaps="true"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_width="115dp"
        android:paddingRight="10dp"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/deliveryFeeTxt"
        android:gravity="center_vertical|left"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:background="#EDF6FC"
        android:textAllCaps="true"
        android:layout_width="115dp"
        android:textAlignment="textEnd"
        android:layout_height="40dp"
        android:layout_above="@+id/textView4"
        android:paddingRight="10dp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:gravity="center_vertical|left"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:text="@string/deliveryFee"
        android:background="#EDF6FC"
        android:textAllCaps="true"
        android:id="@+id/deliveryFee"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_above="@+id/textView4"
        android:paddingLeft="10dp"
        android:layout_toStartOf="@+id/deliveryFeeTxt" />

</RelativeLayout>
